RESOLVED FIXED 243296
createDataChannel should throw OperationError if backend fails to create a channel
https://bugs.webkit.org/show_bug.cgi?id=243296
Summary createDataChannel should throw OperationError if backend fails to create a ch...
youenn fablet
Reported 2022-07-28 09:13:01 PDT
createDataChannel should throw OperationError if backend fails to create a channel
Attachments
youenn fablet
Comment 1 2022-07-28 09:14:50 PDT
Radar WebKit Bug Importer
Comment 2 2022-08-04 09:13:16 PDT
EWS
Comment 3 2022-08-17 05:31:04 PDT
Committed 253515@main (8502286dc2ff): <https://commits.webkit.org/253515@main> Reviewed commits have been landed. Closing PR #2813 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.