createDataChannel should throw OperationError if backend fails to create a channel https://bugs.webkit.org/show_bug.cgi?id=243296

Reviewed by Chris Dumez.

* LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-createDataChannel-expected.txt:
* Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::createDataChannel):

Canonical link: https://commits.webkit.org/253515@main